<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/back"
        android:icon="@android:drawable/ic_media_rew"
        android:title="@string/back"
        android:showAsAction="always"
        app:showAsAction="always"
        />
    <item android:id="@+id/clear_form"
        android:title="@string/clear_form"
        android:icon="@android:drawable/ic_delete"
        android:showAsAction="always"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_print_white"
        android:title="@string/print"
        android:showAsAction="always"
        app:showAsAction="always"
        />


    <item android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
<!--    <item android:id="@+id/action_options"
        android:title="@string/options"
        app:showAsAction="never"/>

    -->

</menu>