<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    >

    <RelativeLayout
        android:id="@+id/few"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/idCardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MembershipEntryActivity"
            tools:ignore="MissingPrefix">
            <LinearLayout
                android:id="@+id/linearLayout_focus"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" />
            <TextView
                android:id="@+id/textVHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@color/colorEntryTextHead"
                android:paddingBottom="12dp"
                android:text="@string/fillup_header" />
            <ImageView
                android:id="@+id/imageVPhoto"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_below="@id/textVHeader"
                android:src="@drawable/cam"
                android:layout_centerHorizontal="true"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageVPhoto"
                android:id="@+id/wphone">
            <EditText
                android:id="@+id/editTPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/idcard_field_horizontal_margin"
                android:ems="7"
                android:inputType="phone"
                android:hint="@string/phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wphone"
                android:id="@+id/wdob">
            <EditText
                android:id="@+id/editTDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/idcard_field_horizontal_margin"
                android:onClick="showStartDateDialog"
                android:focusable="false"
                android:ems="6"
                android:inputType="phone"
                android:hint="@string/dob"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wdob"
                android:id="@+id/wmid">
            <EditText
                android:id="@+id/editTMembershipId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/idcard_field_horizontal_margin"
                android:ems="4"
                android:inputType="number"
                android:maxLength="8"
                android:hint="@string/membership_id"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wmid"
                android:id="@+id/wname">
            <EditText
                android:id="@+id/editTName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:lines="1"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wname"
                android:id="@+id/whname">
            <EditText
                android:id="@+id/editTHusband"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/husband_name"
                android:ems="20"
                android:inputType="textPersonName"
                android:layout_below="@id/wname" />
    </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/whname"
                android:id="@+id/wvoterid">

            <EditText
                android:id="@+id/editTVoterId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="number"
                android:hint="@string/voter_id"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:popupBackground="@drawable/app_bg"
                android:background="@drawable/app_bg"
                android:spinnerMode="dropdown"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_below="@id/wvoterid"
                android:layout_alignParentStart="true" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender"
                android:id="@+id/wmp">
                <com.de.dmdk.view.InstantAutoCompleteTextView
                    android:id="@+id/editTMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:hint="@string/mp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wmp"
                android:id="@+id/wmla">
                <com.de.dmdk.view.InstantAutoCompleteTextView
                    android:id="@+id/editTMLA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:inputType="textPersonName"
                    android:hint="@string/mla"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wmla"
                android:id="@+id/wdist">
                <com.de.dmdk.view.InstantAutoCompleteTextView
                    android:id="@+id/autoCompleteTVDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="@string/district"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wdist"
                android:id="@+id/wpanch">
                <com.de.dmdk.view.InstantAutoCompleteTextView
                    android:id="@+id/autoCompleteTVPanchayat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="@string/panchayat"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wpanch"
                android:id="@+id/wward">

            <EditText
                android:id="@+id/editTWard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ward"
                android:ems="20"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wward"
                android:id="@+id/wtown">


            <com.de.dmdk.view.InstantAutoCompleteTextView
                android:id="@+id/autoCompleteTVTownCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="8"
                android:hint="@string/town_city"/>
</android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wtown"
                android:id="@+id/wdoj">


            <EditText
                android:id="@+id/editTDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:ems="5"
                android:inputType="date" />

</android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:backgroundTint="@color/colorBaggyGreen"
                android:id="@+id/btnPreview"
                android:layout_below="@+id/wdoj"
                android:layout_marginTop="@dimen/idcard_field_vertical_margin"
                android:layout_centerHorizontal="true" />




        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
